--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/CreateBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/CreateBatch.cshtml
@@ -2,100 +2,90 @@
 @model PRN231_2_EventFlowerExchange_FE.Pages.BatchPages.CreateBatchModel
 @{
     ViewData["Title"] = "Create New Batch";
+    ViewData["ShowHeader"] = false;
+    ViewData["ShowFooter"] = false;
 }
-<div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
-    <h1 class="text-2xl font-bold mb-6">Create New Batch</h1>
 
-    <!-- Success Message -->
-    @if (!string.IsNullOrEmpty(TempData["SuccessMessage"] as string))
-    {
-        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4" role="alert">
-            <span class="block sm:inline">@TempData["SuccessMessage"]</span>
+<div class="bg-gray-100 min-h-screen">
+    <partial name="_AdminHeader" />
+
+    <div class="flex overflow-hidden bg-white pt-16">
+        <partial name="_AdminNav" />
+
+        <div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64">
+            <main class="py-10 px-4">
+                <div class="max-w-7xl mx-auto">
+                    <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                        <h1 class="text-2xl font-bold mb-6">Create New Batch</h1>
+
+                        @if (!string.IsNullOrEmpty(TempData["SuccessMessage"] as string))
+                        {
+                            <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4" role="alert">
+                                <span class="block sm:inline">@TempData["SuccessMessage"]</span>
+                            </div>
+                        }
+
+                        @if (!ViewData.ModelState.IsValid)
+                        {
+                            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+                                <ul>
+                                    @foreach (var modelState in ViewData.ModelState.Values)
+                                    {
+                                        foreach (var error in modelState.Errors)
+                                        {
+                                            <li>@error.ErrorMessage</li>
+                                        }
+                                    }
+                                </ul>
+                            </div>
+                        }
+
+                        <form method="post" enctype="multipart/form-data">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.BatchName">Batch Name</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.BatchName" type="text" placeholder="Batch Name">
+                                    <span asp-validation-for="Input.BatchName" class="text-red-500 text-xs italic"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.EventName">Event Name</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.EventName" type="text" placeholder="Event Name">
+                                    <span asp-validation-for="Input.EventName" class="text-red-500 text-xs italic"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.EventDate">Event Date</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.EventDate" type="date">
+                                    <span asp-validation-for="Input.EventDate" class="text-red-500 text-xs italic"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.BatchQuantity">Quantity</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.BatchQuantity" type="number" placeholder="100">
+                                    <span asp-validation-for="Input.BatchQuantity" class="text-red-500 text-xs italic"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.RemainingQuantity">Remaining Quantity</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.RemainingQuantity" type="number" placeholder="100">
+                                    <span asp-validation-for="Input.RemainingQuantity" class="text-red-500 text-xs italic"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.EntryDate">Entry Date</label>
+                                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.EntryDate" type="date">
+                                    <span asp-validation-for="Input.EntryDate" class="text-red-500 text-xs italic"></span>
+                                </div>
+                            </div>
+                            <div class="mb-4">
+                                <label class="block text-gray-700 text-sm font-bold mb-2" asp-for="Input.Description">Description</label>
+                                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" asp-for="Input.Description" rows="3" placeholder="Describe the batch"></textarea>
+                                <span asp-validation-for="Input.Description" class="text-red-500 text-xs italic"></span>
+                            </div>
+                            <div class="flex items-center justify-between">
+                                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Create</button>
+                                <a href="/BatchIndex" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Cancel</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </main>
         </div>
-    }
-
-    <!-- Error Messages -->
-    @if (!ViewData.ModelState.IsValid)
-    {
-        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
-            <ul>
-                @foreach (var modelState in ViewData.ModelState.Values)
-                {
-                    foreach (var error in modelState.Errors)
-                    {
-                        <li>@error.ErrorMessage</li>
-                    }
-                }
-            </ul>
-        </div>
-    }
-
-    <form method="post" enctype="multipart/form-data">
-        <div class="-mx-3 md:flex mb-6">
-            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.EventName">
-                    Event Name
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EventName" type="text" placeholder="Rose">
-                <span asp-validation-for="Input.EventName" class="text-red text-xs italic"></span>
-            </div>
-            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.EventDate">
-                    Event Date
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EventDate" type="date">
-                <span asp-validation-for="Input.EventDate" class="text-red text-xs italic"></span>
-            </div>
-        </div>
-
-        <div class="-mx-3 md:flex mb-6">
-            <div class="md:w-full px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.BatchName">
-                    Batch Name
-                </label>
-                <textarea class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3" asp-for="Input.BatchName" placeholder="Describe the name batch"></textarea>
-                <span asp-validation-for="Input.BatchName" class="text-red text-xs italic"></span>
-            </div>
-            <div class="md:w-full px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.Description">
-                    Description
-                </label>
-                <textarea class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3" asp-for="Input.Description" placeholder="Describe the flower batch"></textarea>
-                <span asp-validation-for="Input.Description" class="text-red text-xs italic"></span>
-            </div>
-        </div>
-
-        <div class="-mx-3 md:flex mb-6">
-            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.BatchQuantity">
-                    Quantity
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.BatchQuantity" type="number" placeholder="100">
-                <span asp-validation-for="Input.BatchQuantity" class="text-red text-xs italic"></span>
-            </div>
-        </div>
-        <div class="-mx-3 md:flex mb-6">
-            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.RemainingQuantity">
-                    Remaining Quantity
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.RemainingQuantity" type="number" placeholder="100">
-                <span asp-validation-for="Input.RemainingQuantity" class="text-red text-xs italic"></span>
-            </div>
-        </div>
-
-
-        <div class="-mx-3 md:flex mb-6">
-            <div class="md:w-1/2 px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.EntryDate">
-                    Entry Date
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EntryDate" type="date">
-                <span asp-validation-for="Input.EntryDate" class="text-red text-xs italic"></span>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Create</button>
-        <a href="/BatchIndex" class="btn btn-secondary">Cancel</a>
-
-    </form>
+    </div>
 </div>
