--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/DeleteBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/DeleteBatch.cshtml
@@ -2,62 +2,71 @@
 @model PRN231_2_EventFlowerExchange_FE.Pages.BatchPages.DeleteBatchModel
 @{
     ViewData["Title"] = "Delete Batch";
+    ViewData["ShowHeader"] = false;
+    ViewData["ShowFooter"] = false;
 }
-@* 
-<div class="container mx-auto px-4 py-8 mt-16">
-    <div class="max-w-2xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
-        <div class="px-6 py-4">
-            <h2 class="text-2xl font-bold text-center text-gray-800 mb-4 mt-8">Delete Batch</h2>
 
+<div class="bg-gray-100 min-h-screen">
+    <partial name="_AdminHeader" />
 
-            @if (Model.Batch != null)
-            {
-                <div class="grid grid-cols-2 gap-4 mb-6">
-                    <p class="font-medium text-gray-700">Event Name:</p>
-                    <p>@Model.Batch.EventName</p>
-                    <p class="font-medium text-gray-700">Event Date:</p>
-                    <p>@Model.Batch.EventDate</p>
-                    <p class="font-medium text-gray-700">Batch Date:</p>
-                    <p>@Model.Batch.EntryDate</p>
-                    <p class="font-medium text-gray-700">Batch Quantity:</p>
-                    <p>@Model.Batch.BatchQuantity</p>
-                    <p class="font-medium text-gray-700">Remaining Quantity:</p>
-                    <p>@Model.Batch.RemainingQuantity</p>
-                    <p class="font-medium text-gray-700">Batch Description:</p>
-                    <p>@Model.Batch.Description</p>
-                </div>
+    <div class="flex overflow-hidden bg-white pt-16">
+        <partial name="_AdminNav" />
 
-                <div class="flex justify-end space-x-4">
-                    <a asp-page="./BatchIndex" class="px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400 transition duration-300">Back</a>
-                    <button type="button" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition duration-300" onclick="showDeleteConfirmation()">
-                        Delete
-                    </button>
-                </div>
+        <div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64">
+            <main class="py-10 px-4">
+                <div class="max-w-7xl mx-auto">
+                    <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                        <h2 class="text-2xl font-bold text-center text-gray-800 mb-4">Delete Batch</h2>
 
-                <div id="deleteConfirmationModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden items-center justify-center">
-                    <div class="bg-white p-6 rounded-lg shadow-xl">
-                        <h3 class="text-lg font-bold mb-4">Confirm Delete</h3>
-                        <p class="mb-4">Are you sure you want to delete this batch?</p>
-                        <div class="flex justify-end space-x-4">
-                            <button type="button" class="px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400 transition duration-300" onclick="hideDeleteConfirmation()">Cancel</button>
-                            <form method="post" asp-page-handler="Delete">
-                                <input type="hidden" name="id" value="@Model.Batch.BatchId" />
-                                <button type="submit" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition duration-300">Yes, Delete</button>
-                            </form>
+                        @if (Model.Batch != null)
+                        {
+                            <div class="grid grid-cols-2 gap-4 mb-6">
+                                <p class="font-medium text-gray-700">Event Name:</p>
+                                <p>@Model.Batch.EventName</p>
+                                <p class="font-medium text-gray-700">Event Date:</p>
+                                <p>@Model.Batch.EventDate.ToShortDateString()</p>
+                                <p class="font-medium text-gray-700">Batch Date:</p>
+                                <p>@Model.Batch.EntryDate.ToShortDateString()</p>
+                                <p class="font-medium text-gray-700">Batch Quantity:</p>
+                                <p>@Model.Batch.BatchQuantity</p>
+                                <p class="font-medium text-gray-700">Remaining Quantity:</p>
+                                <p>@Model.Batch.RemainingQuantity</p>
+                                <p class="font-medium text-gray-700">Batch Description:</p>
+                                <p>@Model.Batch.Description</p>
+                            </div>
 
-                        </div>
+                            <div class="flex justify-end space-x-4">
+                                <a asp-page="./BatchIndex" class="px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400 transition duration-300">Back</a>
+                                <button type="button" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition duration-300" onclick="showDeleteConfirmation()">
+                                    Delete
+                                </button>
+                            </div>
+
+                            <div id="deleteConfirmationModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden items-center justify-center">
+                                <div class="bg-white p-6 rounded-lg shadow-xl">
+                                    <h3 class="text-lg font-bold mb-4">Confirm Delete</h3>
+                                    <p class="mb-4">Are you sure you want to delete this batch?</p>
+                                    <div class="flex justify-end space-x-4">
+                                        <button type="button" class="px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400 transition duration-300" onclick="hideDeleteConfirmation()">Cancel</button>
+                                        <form method="post" asp-page-handler="Delete">
+                                            <input type="hidden" name="id" value="@Model.Batch.BatchId" />
+                                            <button type="submit" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition duration-300">Yes, Delete</button>
+                                        </form>
+                                    </div>
+
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <p class="text-red-500 text-center">Batch not found.</p>
+                        }
                     </div>
                 </div>
-            }
-            else
-            {
-                <p class="text-red-500 text-center">Batch not found.</p>
-            }
+            </main>
         </div>
     </div>
 </div>
-
-
 
 @section Scripts {
     <script>
@@ -71,4 +80,4 @@
             document.getElementById('deleteConfirmationModal').classList.remove('flex');
         }
     </script>
-} *@
+}
