--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserIndex.cshtml
@@ -58,10 +58,16 @@
                                                                     @user.Status
                                                                 </span>
                                                             </td>
-                                                            <td class="p-4 whitespace-nowrap text-sm font-medium">
-                                                                <a asp-page="/UserPages/UserEdit" asp-route-id="@user.UserId" class="text-yellow-300 hover:text-yellow-700 mr-2">Edit</a>
-                                                                <a asp-page="/UserPages/UserDetail" asp-route-id="@user.UserId" class="text-blue-600 hover:text-blue-900 mr-2">Details</a>
-                                                                <a asp-page="/UserPages/UserDelete" asp-route-id="@user.UserId" class="text-red-600 hover:text-red-900">Delete</a>
+                                                            <td class="p-4 whitespace-nowrap text-sm font-medium flex space-x-2">
+                                                             @*    <a asp-page="/UserPages/UserEdit" asp-route-id="@user.UserId" class="cursor-pointer whitespace-nowrap rounded-md bg-sky-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-sky-500 dark:text-white dark:focus-visible:outline-sky-500">
+                                                                    Edit
+                                                                </a> *@
+                                                                <a asp-page="/UserPages/UserDetail" asp-route-id="@user.UserId" class="cursor-pointer whitespace-nowrap rounded-md bg-sky-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-sky-500 dark:text-white dark:focus-visible:outline-sky-500">
+                                                                    Details
+                                                                </a>
+                                                                <a asp-page="/UserPages/UserDelete" asp-route-id="@user.UserId" class="cursor-pointer whitespace-nowrap rounded-md bg-red-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-red-500 dark:text-white dark:focus-visible:outline-red-500">
+                                                                    Delete
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                     }
